--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,4 +1,81 @@
 /**index.wxss**/
+.user-base{
+  padding: 1px 0;
+  background-color: #ffa000;
+  color: #fff;
+}
+.user-info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.5em 0 0.5em 0;
+}
+.userinfo-avatar{
+  width: 160rpx;
+  height: 160rpx;
+  border-radius: 50%;
+  border:0px solid rgba(255,255,255,0.6);
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+/* .userinfo-nickname{
+  margin: 0 auto;
+} */
+.user-links{
+  display: flex;
+  border-top:1px solid rgba(255,255,255,0.1);
+}
+.link-item{
+  width: 50%;
+  font-size: 80%;
+  box-sizing: border-box;
+  line-height: 46rpx;
+}
+.link-item navigator{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.4em 0;
+}
+.link-item:last-child{
+  border-left: 1px solid rgba(255,255,255,0.1);
+}
+.number{
+  font-size: 48rpx;
+}
+.nav-group{
+  margin: 42rpx 0;
+  border-top:1px solid #eee;
+  border-bottom:1px solid #eee;
+}
+.nav-item{
+  position: relative;
+}
+.nav-item::after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 1em;
+  height: 1px;
+  background-color: #eee;
+  transform: translateY(50%);
+}
+.nav-item:last-child::after{
+  background-color:rgba(255,255,255,0);
+}
+
+.nav-item navigator{
+  padding:22rpx 1em;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+}
+.nav-icon{
+  width: 60rpx;
+  height: 60rpx;
+  margin-right: 20rpx;
+}
 
 page {
   background: #f6f6f6;
@@ -7,61 +84,71 @@ page {
   justify-content: flex-start;
 }
 
-.userinfo, .uploader, .tunnel {
+/* .userinfo{
   margin-top: 40rpx;
   height: 140rpx;
   width: 100%;
   background: #fff;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border:1px solid rgba(255,255,255,0.6);
   border-left: none;
   border-right: none;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  margin: 0.5em 0 1em 0;
   transition: all 300ms ease;
-}
+} */
 
-.userinfo {
+/* .userinfo {
   padding-left: 120rpx;
-}
+} */
 
-.userinfo-avatar {
+/* .userinfo-avatar {
   width: 100rpx;
+  height: 100rpx;
+  margin: 20rpx;
   height: 100rpx;
   margin: 20rpx;
   border-radius: 50%;
   background-size: cover;
   background-color: white;
-}
+} */
 
 .userinfo-avatar[size] {
-  width: 100rpx;
+  margin-top: 20rpx;
+  border-radius: 50%;
+  width: 160rpx;
+  height: 160rpx;
+  border:0px solid rgba(255,255,255,0.6);
 }
 
 
-.userinfo-avatar:after {
+/* .userinfo-avatar:after {
   border: none;
-}
+} */
 
 .userinfo-nickname {
+  margin-top: 20rpx;
   font-size: 32rpx;
-  color: #007aff;
-  background-color: white;
+  color: black;
+  background-color: #ffa000;
   background-size: cover;
-  text-align: left;
-  padding-left: 0;
-  margin-left: 10px;
+  align-items: center;
+  /* padding-left: 0;
+  margin-left: 10px; */
 }
 
 .userinfo-nickname::after {
   border: none;
 }
 
-.userinfo-nickname-wrapper {
+/* .userinfo-nickname-wrapper {
   flex: 1;
-}
+} */
 
-.uploader, .tunnel {
+/* .uploader, .tunnel {
   height: auto;
   padding: 0 0 0 40rpx;
   flex-direction: column;
@@ -150,4 +237,4 @@ page {
   font-size: 24rpx;
   line-height: 36rpx;
   word-break: break-all;
-}
+} */
