--- a/miniprogram/pages/shareCircle/shareCircle.wxss
+++ b/miniprogram/pages/shareCircle/shareCircle.wxss
@@ -186,5 +186,67 @@ page{
   height: 60rpx;
   border-radius: 10rpx;
   right: 90rpx;
-  background: rgba(0, 0, 0, 0.7)
+  background: rgba(252, 250, 250, 0.7)
+}
+
+.dianzan
+{
+  position:absolute;
+  width:120rpx;
+  border-right: 1px solid #ccc;
+  top:5rpx;
+  left:0;
+  text-align:center;
+}
+
+/*点赞*/
+.dianzan-box
+{
+  width:600rpx;
+  height:auto;
+  margin-left:110rpx;
+  background:#F3F3F5;
+  border-bottom: 1px solid #ccc;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+}
+
+/*评论*/
+.pinglun
+{
+  position:absolute;
+  width:120rpx;
+  border-left: 1px solid #ccc;
+  right:0;
+  top:5rpx;
+  text-align:center;
+}
+
+.pinglun-box
+{
+  width:600rpx;
+  height:auto;
+  margin-left:110rpx;
+  background:#F3F3F5;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+
+.pinglun-one
+{
+  /*border-bottom: 1px solid #ccc;*/
+  padding-bottom:5rpx;
+}
+
+.pinglun-nickname
+{
+  color:#576b95;
+  font-size:10pt;
+   margin-left: 15rpx;
+}
+
+.pinglun-content
+{
+  color:#000;
+  font-size:10pt;
 }
