--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -33,6 +33,12 @@
           <text>粉丝</text>
         </navigator>
       </view>
+      <view class="nav-item">
+        <navigator url="../publish/publish">
+          <image class="nav-icon" mode="widthFix" src="../../images/fans.png"></image>
+          <text>发布</text>
+        </navigator>
+      </view>
     </view>
   </view>
 </view>
