--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,4 +1,8 @@
 /**index.wxss**/
+.page{
+  width: 100%;
+  height: 100%;
+}
 .user-base{
   padding: 1px 0;
   background-color: #ffa000;
@@ -10,6 +14,7 @@
   align-items: center;
   margin: 0.5em 0 0.5em 0;
 }
+
 .userinfo-avatar{
   width: 160rpx;
   height: 160rpx;
@@ -43,13 +48,17 @@
 .number{
   font-size: 48rpx;
 }
+
+
 .nav-group{
+  
   margin: 42rpx 0;
   border-top:1px solid #eee;
   border-bottom:1px solid #eee;
 }
 .nav-item{
   position: relative;
+  border-radius: 20%;
 }
 .nav-item::after{
   content: '';
