--- a/miniprogram/pages/photo/photo.wxss
+++ b/miniprogram/pages/photo/photo.wxss
@@ -3,7 +3,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: #f8af9c;
+  background-color: #ffa000;
 }
 .logo{
   display: block;
@@ -13,14 +13,15 @@
   transform: translateX(-50%);
   width:356rpx;
   height:90rpx;
-
+  border-radius: 30%;
   z-index: 2;
 }
 .bg-img{
+  
   position: absolute;
   bottom: 0;
   width: 100%;
-  height:100%;
+  height:80%;
 }
 .btn-area{
   position: absolute;
@@ -70,4 +71,6 @@
 }
 .text{
   padding-left: 20rpx;
+  font-family: cursive;
+  font-weight:  800;
 }
