--- a/miniprogram/pages/splicePhoto/splice.wxml
+++ b/miniprogram/pages/splicePhoto/splice.wxml
@@ -29,7 +29,7 @@
     <view class="farmeChoose-top"><text class="farmeChoose-top-left">选择相框</text><text class="farmeChoose-top-right" bindtap='closeFrameChoose'></text></view>
     <scroll-view  scroll-y>
       <view wx:for="{{frameSrcs}}" wx:key="*this" data-src="{{item.src}}" class="frameBox" bindtap='chooseFrame'>
-        <image src="{{'../../image/frame/'+item.src}}" mode="aspectFit"></image><text>{{item.title}}</text>
+        <image src="{{'../../images/frame/'+item.src}}" mode="aspectFit"></image><text>{{item.title}}</text>
       </view>
     </scroll-view>
   </view>
