--- a/miniprogram/pages/modifyPhoto/modify.wxml
+++ b/miniprogram/pages/modifyPhoto/modify.wxml
@@ -1,4 +1,14 @@
-<!--miniprogram/pages/modifyPhoto/modify.wxml-->
-<text>miniprogram/pages/modifyPhoto/modify.wxml</text>
-<view>{{ msg }}</view>
-<button bindtap="clickMe">点击我</button>
+<view class="page">
+  <view class="page__hd">
+    <text class="page__title">image</text>
+    <text class="page__desc">图片</text>
+  </view>
+  <view class="page__bd">
+    <view class="section section_gap" wx:for-items="{{array}}" wx:for-item="item">
+      <view class="section__title">{{item.text}}</view>
+      <view class="section__ctn">
+        <image style="width: 200px; height: 200px; background-color: #eeeeee;" mode="{{item.mode}}" src="{{src}}"></image>
+      </view>
+    </view>
+  </view>
+</view>
