--- a/miniprogram/pages/shareCircle/shareCircle.wxml
+++ b/miniprogram/pages/shareCircle/shareCircle.wxml
@@ -1,11 +1,7 @@
 <!-- 仿微信朋友圈 -->
-<wxs module="star">
+<wxs module="share">
   function fn(arr, arg) {
-    var result = {
-      indexOf: false
-    }
-    result.indexOf = arr.indexOf(arg) > -1;
-    console.log(result.indexOf)
+    var result = arr.indexOf(arg) > -1;
     return result;
   }
   module.exports.fn = fn;
@@ -39,7 +35,7 @@
         <view class='A-view'>
           <label>{{groupItem.date}}</label>
           <button bindtap='delete'>删除</button>
-          <image data-_id ='{{groupItem._id}}' bindtap='TouchDiscuss' src='/images/wxdiscuss.png'>
+          <image data-_id ='{{groupItem._id}}' data-star='{{groupItem.star}}'bindtap='TouchDiscuss' src='/images/wxdiscuss.png'>
           </image>
         </view> 
 
@@ -70,8 +66,10 @@
       <!-- 评论按钮弹出框 -->
     <view animation="{{animation}}" class='pop-up-box' style='top:{{popTop}}px;width: {{popWidth}}px;'>
       <view hidden="{{isShow}}">
-        <text class="dianzan" bindtap="unStar" hidden="{{!star.fn(groupItem.star,userInfo.nickName).indexOf }}">取消点赞</text>
-        <text class="dianzan" bindtap="star" hidden="{{star.fn(groupItem.star,userInfo.nickName).indexOf }}">点赞</text> 
+        <text class="dianzan" bindtap="unStar" 
+        hidden="{{!share.fn(star,userInfo.nickName)}}">取消点赞</text>
+        <text class="dianzan" bindtap="star" 
+        hidden="{{share.fn(star,userInfo.nickName)}}">点赞</text> 
       </view>
       <view>
           <text class="pinglun" bindtap="comment" hidden="{{isShow}}">评论</text>
