修改一些小细节

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -36,7 +36,7 @@
       </view>
       <view class="nav-item">
         <navigator url="../publish/publish">
-          <image class="nav-icon" mode="widthFix" src="../../images/fans.png"></image>
+          <image class="nav-icon" mode="widthFix" src="../../images/choice-active.png"></image>
           <text>发布</text>
         </navigator>
       </view>
